* Switched to the ".hpp" extension for C++ headers * Added Qt to the build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,13 @@ configure_file ("${CMAKE_CURRENT_SOURCE_DIR}/common/config.h.in" "${rckam_CXX_CO
 include_directories (${rckam_CXX_CONFIG_H_DIR})
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
+#find_package(Qt5Widgets CONFIG REQUIRED)
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
+message("QT_INCLUDES: ${QT_INCLUDES}")
+include_directories(${QT_INCLUDES})
+
+add_definitions(-Wall -pedantic -Wextra)
+
 set (rckam_ALL_LIBRARIES
     common
     options
@@ -30,6 +37,7 @@ rckam_find_library(GPHOTO2 gphoto2/gphoto2.h gphoto2)
 #find_package( GPHOTO2 REQUIRED )
 
 
+
 set (rckam_AVAILABLE_LIBRARIES "")
 set (rckam_ALL_LIBRARY_DIRS "")
 add_custom_target(build_libs)
@@ -48,6 +56,7 @@ file(GLOB rckam_EXECUTABLE_SOURCES *.cpp)
 foreach (SOURCE_FILE ${rckam_EXECUTABLE_SOURCES})
     get_filename_component (EXECUTABLE_NAME ${SOURCE_FILE} NAME_WE)
     add_executable(${EXECUTABLE_NAME} ${SOURCE_FILE})
-    target_link_libraries (${EXECUTABLE_NAME} ${rckam_AVAILABLE_LIBRARIES} ${Boost_LIBRARIES} ${PTHREAD_LIBRARY})
-endforeach (SOURCE_FILE)
+    target_link_libraries (${EXECUTABLE_NAME} ${rckam_AVAILABLE_LIBRARIES} Qt5::Gui Qt5::Widgets ${Boost_LIBRARIES} ${PTHREAD_LIBRARY})
+    #target_link_libraries (${EXECUTABLE_NAME} ${rckam_AVAILABLE_LIBRARIES} Qt5Widgets ${Boost_LIBRARIES} ${PTHREAD_LIBRARY})
 
+endforeach (SOURCE_FILE)
