Created boiler plate for options parsing and initializing GPIOwq

--- a/tracker/Makefile
+++ b/tracker/Makefile
@@ -28,7 +28,7 @@ clean:
 
 .PHONY: help
 clean:
-help: $(RCKAM_ROOT_DIR)/auto/README.md
+help: $(RCKAM_ROOT_DIR)/tracker/README.md
 	cat $<
 
 ############################################################
