added skeleton classes for an image preview feedwq

--- a/gui/src/devices/CMakeLists.txt
+++ b/gui/src/devices/CMakeLists.txt
@@ -1,2 +1,3 @@
 include(${rckam_CXX_LIBRARY_CMAKE})
 include_directories(${LIBUSB_1_INCLUDE_DIR})
+target_link_libraries (rckam_devices Qt5::Widgets Qt5::Quick)
