--- a/gui/src/models/CMakeLists.txt
+++ b/gui/src/models/CMakeLists.txt
@@ -1,5 +1,5 @@
 include(${rckam_CXX_LIBRARY_CMAKE})
 include_directories(${LIBUSB_1_INCLUDE_DIR})
-target_link_libraries (rckam_models Qt5::Widgets)
+target_link_libraries (rckam_models Qt5::Widgets Qt5::Quick)
 
 
